@@ -189,20 +189,20 @@ $wp_customize->add_control( $key, array(
 
 /**
  * ====================================================
- * Featured Image
+ * Entry Thumbnail
  * ====================================================
  */
 
-// Heading: Featured Image
-$wp_customize->add_control( new Suki_Customize_Control_Heading( $wp_customize, 'heading_entry_featured_media', array(
+// Heading: Entry Thumbnail
+$wp_customize->add_control( new Suki_Customize_Control_Heading( $wp_customize, 'heading_entry_thumbnail', array(
 	'section'     => $section,
 	'settings'    => array(),
-	'label'       => esc_html__( 'Featured Image', 'suki' ),
+	'label'       => esc_html__( 'Entry Thumbnail', 'suki' ),
 	'priority'    => 40,
 ) ) );
 
-// Featured image
-$key = 'entry_featured_media';
+// Display
+$key = 'entry_thumbnail';
 $wp_customize->add_setting( $key, array(
 	'default'     => suki_array_value( $defaults, $key ),
 	'sanitize_callback' => array( 'Suki_Customizer_Sanitization', 'select' ),
@@ -210,7 +210,7 @@ $wp_customize->add_setting( $key, array(
 $wp_customize->add_control( $key, array(
 	'type'        => 'select',
 	'section'     => $section,
-	// 'label'       => esc_html__( 'Featured image', 'suki' ),
+	// 'label'       => esc_html__( 'Display', 'suki' ),
 	'choices'     => array(
 		''       => esc_html__( 'Disabled', 'suki' ),
 		'before' => esc_html__( 'Before Content Header', 'suki' ),
@@ -219,15 +219,29 @@ $wp_customize->add_control( $key, array(
 	'priority'    => 40,
 ) );
 
-// Featured image ignores padding
-$key = 'entry_featured_media_ignore_padding';
+// Size
+$key = 'entry_thumbnail_size';
+$wp_customize->add_setting( $key, array(
+	'default'     => suki_array_value( $defaults, $key ),
+	'sanitize_callback' => array( 'Suki_Customizer_Sanitization', 'select' ),
+) );
+$wp_customize->add_control( $key, array(
+	'type'        => 'select',
+	'section'     => $section,
+	'label'       => esc_html__( 'Size', 'suki' ),
+	'choices'     => suki_get_all_image_sizes(),
+	'priority'    => 40,
+) );
+
+// Ignore padding
+$key = 'entry_thumbnail_ignore_padding';
 $wp_customize->add_setting( $key, array(
 	'default'     => suki_array_value( $defaults, $key ),
 	'sanitize_callback' => array( 'Suki_Customizer_Sanitization', 'toggle' ),
 ) );
 $wp_customize->add_control( new Suki_Customize_Control_Toggle( $wp_customize, $key, array(
 	'section'     => $section,
-	'label'       => esc_html__( 'Featured image ignores padding', 'suki' ),
+	'label'       => esc_html__( 'Ignore padding', 'suki' ),
 	'priority'    => 40,
 ) ) );
 
