@@ -47,6 +47,7 @@ class Suki_Migrate_1_3_0 {
 		 * - Migrate page settings values (array) to singular key
 		 * - Migrate blog_index_... to post_archive_...
 		 * - Migrate blog_single_... to post_single_...
+		 * - Migrate featured_media... to thumbnail...
 		 */
 	}
 
